2009-02-15 Pierre Wieser <pwieser@trychlos.org>

	Rename src/core/na-object-menu-class.h to src/api/na-object-menu.h
	Rename src/core/na-object-profile-class.h to src/api/na-object-profile.h
	Rename src/core/na-object-action-class.h to src/api/na-object-action.h
	Rename src/core/na-object-item-class.h to src/api/na-object-item.h
	Rename src/core/na-object-id-class.h to src/api/na-object-id.h
	Rename src/core/na-object-class.h to src/api/na-object.h
	Rename src/core/na-iduplicable.h to src/api/na-iduplicable.h
	Rename src/core/na-gconf-utils.h to src/api/na-gconf-utils.h
	Rename src/api/na-iio-provider.c to src/core/na-iio-provider.c

	* src/api/na-dbus.h: Update defined name.

	* m4/na-log-domains.m4: Update log domains with new subdirs.

	* doc/io-provider-id: Reference na-xml XML provider.

	Rename src/api/na-gconf-monitor.c to src/core/na-gconf-monitor.c
	Rename src/core/na-utils.h to src/api/na-core-utils.h
	Rename src/core/na-utils.c to src/core/na-core-utils.c

	* src/api/Makefile.am:
	* src/core/Makefile.am: Updated accordingly.

	* src/core/na-core-utils.c:
	* src/core/na-core-utils.h: Normalize functions names.

	Merge src/private/ and src/runtime to src/core/
	Rename src/api/na-api.h to src/api/na-extension.h

	* src/api/README:
	* src/io-desktop/nadp-module.c:
	* src/io-gconf/nagp-module.c:
	* src/runtime/na-module.c: Updated accordingly.

	Define XML provider as a dynamic module.
	
	* io-xml/Makefile.am:
	* io-xml/naxml-module.c:
	* io-xml/naxml-provider.c:
	* io-xml/naxml-provider.h: New files.

	Rename source tree from nautilus-actions/ to src/
	Rename src/io-provider-desktop/ to src/io-desktop/
	Rename src/io-provider-gconf/ to src/io-gconf/
	Rename src/plugin to src/plugin-menu/
	Rename src/tracker to src/plugin-tracker/

	* Makefile.am:
	* configure.ac:
	* po/POTFILES.in: Updated accordingly.

2009-01-31 Pierre Wieser <pwieser@trychlos.org>

	* nautilus-actions/io-provider-desktop/nadp-desktop-file.c: